deploy/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: flask-project
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: ClusterIP
